@@ -71,7 +71,8 @@ allprojects {
         jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
         jvmArgs "-XX:HeapDumpPath=${rootProject.buildDir}"
 
-        // `-Pjava.security.manager` was added in Java 17 and the default value was changed to `disallow` in Java 18.
+        // `-Djava.security.manager` was added in Java 17 and the default value was changed to
+        // `disallow` in Java 18.
         // - https://openjdk.org/jeps/411
         // - https://bugs.openjdk.org/browse/JDK-8270380
         if (project.ext.testJavaVersion >= 17) {
@@ -165,7 +166,7 @@ configure(projectsWithFlags('java')) {
         // Logging
         implementation libs.slf4j.api
         testImplementation libs.slf4j.jul.to.slf4j
-        testImplementation libs.logback
+        testImplementation libs.logback12
         testRuntimeOnly libs.slf4j.jcl.over.slf4j
         testRuntimeOnly libs.slf4j.log4j.over.slf4j
 
